# arxiv-graphrag

./: .env  .gitignore  main.py  pyproject.toml
data/: papers.csv
src/: agent.py
src/ingestion/: build_graph.py  build_vector.py
src/tools/: graph.py  vector.py
