[project]
name = "arxiv-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "google-adk>=1.27.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
